--- a/cv.html
+++ b/cv.html
@@ -20,6 +20,10 @@
       box-sizing: border-box;
     }
 
+    html {
+      scroll-behavior: smooth;
+    }
+
     body {
       font-family: 'SF Pro Display', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
       background-color: var(--bg);
@@ -75,29 +79,6 @@
       padding: 0 20px;
     }
 
-    .timeline {
-      position: relative;
-      margin: 40px 0;
-      padding-left: 30px;
-      border-left: 2px solid var(--line);
-    }
-
-    .entry {
-      margin-bottom: 40px;
-      position: relative;
-    }
-
-    .entry::before {
-      content: "";
-      position: absolute;
-      left: -10px;
-      top: 6px;
-      width: 12px;
-      height: 12px;
-      border-radius: 50%;
-      background-color: var(--text);
-    }
-
     h1, h2 {
       font-weight: 600;
       margin-bottom: 10px;
@@ -109,7 +90,8 @@
 
     h2 {
       font-size: 1.4rem;
-      margin-top: 40px;
+      margin-top: 50px;
+      margin-bottom: 20px;
     }
 
     .label {
@@ -120,6 +102,33 @@
     ul {
       padding-left: 20px;
       list-style-type: disc;
+    }
+
+    .timeline {
+      position: relative;
+      margin: 40px 0 60px 0;
+      padding-left: 40px;
+      border-left: 2px solid var(--line);
+    }
+
+    .entry {
+      position: relative;
+      margin-bottom: 60px;
+    }
+
+    .entry::before {
+      content: "";
+      position: absolute;
+      left: -16px;
+      top: 4px;
+      width: 12px;
+      height: 12px;
+      border-radius: 50%;
+      background-color: var(--text);
+    }
+
+    .entry p {
+      margin: 0 0 8px 0;
     }
   </style>
 </head>
