--- a/cv.html
+++ b/cv.html
@@ -108,7 +108,7 @@
     .timeline {
       position: relative;
       margin: 40px 0 60px 0;
-      padding-left: 40px;
+      padding-left: 50px;
     }
 
     .timeline::before {
@@ -131,11 +131,12 @@
       content: "";
       position: absolute;
       left: 12px;
-      top: 2px;
+      top: 0.35em;
       width: 16px;
       height: 16px;
       background: var(--dot);
       border-radius: 50%;
+      transform: translateY(-50%);
       z-index: 1;
     }
 
