--- a/cv.html
+++ b/cv.html
@@ -128,12 +128,6 @@
       margin-bottom: 6px;
     }
 
-    .divider {
-      height: 1px;
-      background: var(--line);
-      margin: 40px 0;
-    }
-
     footer {
       text-align: center;
       font-size: 0.85rem;
@@ -170,7 +164,7 @@
 
   <section>
     <h2>Profile</h2>
-    <p>An experienced Mechanical Maintenance Technician with a proven track record in manufacturing and product development. My experience at Unipres UK shaped my customer-focused and problem-solving approach, with values rooted in trust, integrity, and quality delivery.</p>
+    <p>Dedicated and enthusiastic Product Design student with a professional foundation in mechanical engineering and manufacturing. I bring a unique combination of creativity and precision, shaped by years in the engineering sector and academic design practice. I’m driven by curiosity, love solving problems, and value detail, clarity and communication.</p>
   </section>
 
   <section>
@@ -196,39 +190,39 @@
   <section>
     <h2>Work History</h2>
     <div class="card">
-      <h3>Engineering Maintenance Technician</h3>
-      <p class="subtext">Unipres – Sep 2022 to Jun 2023</p>
-      <ul>
-        <li>Delivered mechanical solutions across departments</li>
-        <li>Contributed to QHSE, productivity and cost reduction initiatives</li>
-      </ul>
-    </div>
-
-    <div class="card">
-      <h3>Cost Planning / CAD</h3>
-      <p class="subtext">Unipres – Sep 2021 to Sep 2022</p>
-      <ul>
-        <li>Developed technical data packs and design schemes</li>
-        <li>Managed cross-functional builds to customer specs</li>
-      </ul>
-    </div>
-
-    <div class="card">
       <h3>Kaizen Team Member</h3>
-      <p class="subtext">Unipres – Sep 2017 to Sep 2021</p>
+      <p class="subtext">Unipres UK – Sep 2017 to Sep 2021</p>
       <ul>
-        <li>Created standard operating sheets</li>
-        <li>Implemented design improvements and process defect resolution</li>
+        <li>Developed and refined engineering processes to enhance efficiency.</li>
+        <li>Produced standard operating procedures and improved system layouts.</li>
+        <li>Worked with teams across the business to optimise productivity.</li>
       </ul>
     </div>
-
+    <div class="card">
+      <h3>Cost Planning & CAD Technician</h3>
+      <p class="subtext">Unipres UK – Sep 2021 to Sep 2022</p>
+      <ul>
+        <li>Created manufacturing drawings and component designs using CAD.</li>
+        <li>Estimated project costs and collaborated with engineers and planners.</li>
+        <li>Presented technical plans for evaluation by senior management.</li>
+      </ul>
+    </div>
+    <div class="card">
+      <h3>Engineering Maintenance Technician</h3>
+      <p class="subtext">Unipres UK – Sep 2022 to Jun 2023</p>
+      <ul>
+        <li>Conducted preventive and reactive mechanical maintenance.</li>
+        <li>Maintained high standards of health, safety and efficiency.</li>
+        <li>Worked cross-functionally with other engineering departments.</li>
+      </ul>
+    </div>
     <div class="card">
       <h3>Product Development Manager</h3>
       <p class="subtext">Fabb Brothers – Mar 2024 to Sep 2024</p>
       <ul>
-        <li>Led R&D for new product lines</li>
-        <li>Liaised with artisans and suppliers</li>
-        <li>Oversaw workshop operations and client-facing projects</li>
+        <li>Led research and prototyping of artisan-based furniture lines.</li>
+        <li>Coordinated with suppliers and craftspeople to achieve design vision.</li>
+        <li>Managed studio space and logistics for ongoing production.</li>
       </ul>
     </div>
   </section>
@@ -237,18 +231,19 @@
     <h2>Skills</h2>
     <div class="card">
       <ul>
-        <li>CAD: SolidWorks, Fusion 360, Shapr3D</li>
-        <li>Adobe: Photoshop, Illustrator, InDesign</li>
-        <li>Web: HTML/CSS</li>
-        <li>Soft Skills: Communication, Teamwork, Attention to Detail</li>
+        <li><strong>CAD:</strong> SolidWorks, Fusion 360, Shapr3D</li>
+        <li><strong>Design:</strong> Photoshop, Illustrator, InDesign</li>
+        <li><strong>Prototyping:</strong> Workshop skills, 3D printing, model making</li>
+        <li><strong>Web:</strong> HTML, CSS</li>
+        <li><strong>Soft Skills:</strong> Communication, Critical Thinking, Presentation</li>
       </ul>
     </div>
   </section>
 
   <section>
-    <h2>Interests</h2>
+    <h2>Hobbies & Interests</h2>
     <div class="card">
-      <p>Design, Photography, Tennis, Film, Running, Antiques, Typography</p>
+      <p>Design, Furniture Making, Photography, Tennis, Film, Running, Antiques, Typography, Architecture</p>
     </div>
   </section>
 </main>
