--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       --text: #1d1d1f;
       --bg: #f5f5f7;
       --white: #ffffff;
+      --accent: #007aff;
     }
 
     * {
@@ -43,7 +44,7 @@
     }
 
     .dropdown {
-      position: absolute;
+      position: fixed;
       top: 70px;
       left: 60px;
       background-color: var(--white);
@@ -66,6 +67,26 @@
       background: #f2f2f2;
     }
 
+    .dropdown a.active {
+      font-weight: 600;
+      color: var(--accent);
+    }
+
+    @media (min-width: 768px) {
+      .dropdown {
+        position: static;
+        display: flex !important;
+        flex-direction: row;
+        background: transparent;
+        box-shadow: none;
+        gap: 24px;
+      }
+
+      .logo {
+        display: none;
+      }
+    }
+
     .banner {
       position: relative;
       width: 100%;
@@ -86,8 +107,6 @@
       height: 100%;
       background: linear-gradient(to bottom, rgba(0, 0, 0, 0.45), rgba(0, 0, 0, 0));
       z-index: 1;
-      opacity: 0;
-      animation: fadeIn 1.5s ease forwards;
     }
 
     .hero-text {
@@ -95,7 +114,11 @@
       z-index: 2;
       text-align: center;
       color: #fff;
-      text-shadow: 0 3px 12px rgba(0, 0, 0, 0.4);
+      text-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
+      backdrop-filter: blur(4px);
+      -webkit-backdrop-filter: blur(4px);
+      padding: 20px 40px;
+      border-radius: 12px;
       animation: fadeInUp 1.2s ease forwards;
       opacity: 0;
     }
@@ -109,12 +132,6 @@
     .hero-text h2 {
       font-size: clamp(1.2rem, 2vw, 1.6rem);
       font-weight: 400;
-    }
-
-    @keyframes fadeIn {
-      to {
-        opacity: 1;
-      }
     }
 
     @keyframes fadeInUp {
@@ -160,12 +177,12 @@
 
   <header>
     <div class="logo" onclick="toggleDropdown()">≡</div>
-    <div class="dropdown" id="dropdownMenu">
-      <a href="index.html">Home</a>
+    <nav class="dropdown" id="dropdownMenu">
+      <a href="index.html" class="active">Home</a>
       <a href="gallery.html">Gallery</a>
       <a href="projects.html">Projects</a>
       <a href="cv.html">CV</a>
-    </div>
+    </nav>
   </header>
 
   <section class="banner">
