--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
       position: relative;
       width: 100%;
       height: 100vh;
-      background-image: url('g.bip.25.JPG'); /* Replace with your image file */
+      background-image: url('g.bip.25.JPG'); /* Replace with your image path */
       background-size: cover;
       background-position: center;
       display: flex;
@@ -114,11 +114,7 @@
       z-index: 2;
       text-align: center;
       color: #fff;
-      text-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
-      backdrop-filter: blur(4px);
-      -webkit-backdrop-filter: blur(4px);
-      padding: 20px 40px;
-      border-radius: 12px;
+      filter: blur(1.2px);
       animation: fadeInUp 1.2s ease forwards;
       opacity: 0;
     }
