--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
       --text: #1d1d1f;
       --bg: #f5f5f7;
       --white: #ffffff;
-      --accent: #007aff;
     }
 
     * {
@@ -44,7 +43,7 @@
     }
 
     .dropdown {
-      position: fixed;
+      position: absolute;
       top: 70px;
       left: 60px;
       background-color: var(--white);
@@ -67,31 +66,11 @@
       background: #f2f2f2;
     }
 
-    .dropdown a.active {
-      font-weight: 600;
-      color: var(--accent);
-    }
-
-    @media (min-width: 768px) {
-      .dropdown {
-        position: static;
-        display: flex !important;
-        flex-direction: row;
-        background: transparent;
-        box-shadow: none;
-        gap: 24px;
-      }
-
-      .logo {
-        display: none;
-      }
-    }
-
     .banner {
       position: relative;
       width: 100%;
       height: 100vh;
-      background-image: url('g.bip.25.JPG'); /* Replace with your image path */
+      background-image: url('g.bip.25.JPG'); /* Replace with your image file */
       background-size: cover;
       background-position: center;
       display: flex;
@@ -107,6 +86,8 @@
       height: 100%;
       background: linear-gradient(to bottom, rgba(0, 0, 0, 0.45), rgba(0, 0, 0, 0));
       z-index: 1;
+      opacity: 0;
+      animation: fadeIn 1.5s ease forwards;
     }
 
     .hero-text {
@@ -114,7 +95,7 @@
       z-index: 2;
       text-align: center;
       color: #fff;
-      filter: blur(1.2px);
+      text-shadow: 0 3px 12px rgba(0, 0, 0, 0.4);
       animation: fadeInUp 1.2s ease forwards;
       opacity: 0;
     }
@@ -128,6 +109,12 @@
     .hero-text h2 {
       font-size: clamp(1.2rem, 2vw, 1.6rem);
       font-weight: 400;
+    }
+
+    @keyframes fadeIn {
+      to {
+        opacity: 1;
+      }
     }
 
     @keyframes fadeInUp {
@@ -173,12 +160,12 @@
 
   <header>
     <div class="logo" onclick="toggleDropdown()">≡</div>
-    <nav class="dropdown" id="dropdownMenu">
-      <a href="index.html" class="active">Home</a>
+    <div class="dropdown" id="dropdownMenu">
+      <a href="index.html">Home</a>
       <a href="gallery.html">Gallery</a>
       <a href="projects.html">Projects</a>
       <a href="cv.html">CV</a>
-    </nav>
+    </div>
   </header>
 
   <section class="banner">
