--- a/gallery.html
+++ b/gallery.html
@@ -70,6 +70,20 @@
       background: #f2f2f2;
     }
 
+    /* Video Banner */
+    .banner {
+      position: relative;
+      width: 100%;
+      height: 100vh; /* Full screen height */
+      overflow: hidden;
+    }
+
+    .banner video {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
+
     main {
       max-width: 1000px;
       margin: 60px auto;
@@ -168,6 +182,14 @@
       <a href="cv.html">CV</a>
     </div>
   </header>
+
+  <!-- Video Banner -->
+  <section class="banner">
+    <video autoplay loop muted playsinline>
+      <source src="Amazon.40.mp4" type="video/mp4">
+      Your browser does not support the video tag.
+    </video>
+  </section>
 
   <main>
     <h1>Gallery</h1>
