--- a/gallery.html
+++ b/gallery.html
@@ -74,7 +74,7 @@
     .banner {
       position: relative;
       width: 100%;
-      height: 100vh; /* Full screen height */
+      height: 300px; /* Reduced height */
       overflow: hidden;
     }
 
