--- a/index.html
+++ b/index.html
@@ -157,6 +157,7 @@
       font-size: 1.1rem;
       line-height: 1.7;
       color: #555;
+      margin-bottom: 1rem;
     }
 
     footer {
@@ -178,7 +179,7 @@
 <body>
 
   <header>
-    <div class="logo" onclick="toggleDropdown()">≡</div>
+    <div class="logo">≡</div>
     <div class="dropdown" id="dropdownMenu">
       <a href="index.html">Home</a>
       <a href="gallery.html">Gallery</a>
@@ -217,16 +218,17 @@
   </footer>
 
   <script>
-    // Dropdown menu toggle
-    const toggle = document.querySelector(".logo");
+    // Dropdown toggle
+    const logoButton = document.querySelector(".logo");
     const menu = document.getElementById("dropdownMenu");
 
-    toggle.addEventListener("click", () => {
+    logoButton.addEventListener("click", (e) => {
+      e.stopPropagation();
       menu.style.display = menu.style.display === "flex" ? "none" : "flex";
     });
 
     document.addEventListener("click", (e) => {
-      if (!menu.contains(e.target) && e.target !== toggle) {
+      if (!menu.contains(e.target) && e.target !== logoButton) {
         menu.style.display = "none";
       }
     });
@@ -237,6 +239,7 @@
       entries.forEach(entry => {
         if (entry.isIntersecting) {
           aboutSection.classList.add('show');
+          observer.unobserve(entry.target); // stops observing after first trigger
         }
       });
     }, { threshold: 0.2 });
