--- a/gallery.html
+++ b/gallery.html
@@ -220,7 +220,11 @@
           <img src="untitled.41 2.JPG" alt="Product Design">
         </a>
       </div>
-      <!-- Add more gallery items here -->
+      <div class="gallery-item">
+        <a href="#img2">
+          <img src="Exploded Organiser.45.jpg" alt="Exploded Organiser">
+        </a>
+      </div>
     </div>
   </main>
 
@@ -228,6 +232,11 @@
   <div id="img1" class="lightbox">
     <a href="#" class="close">&times;</a>
     <img src="untitled.41 2.JPG" alt="Product Design Large">
+  </div>
+
+  <div id="img2" class="lightbox">
+    <a href="#" class="close">&times;</a>
+    <img src="Exploded Organiser.45.jpg" alt="Exploded Organiser Large">
   </div>
 
   <script>
