--- a/gallery.html
+++ b/gallery.html
@@ -217,12 +217,12 @@
     <div class="gallery">
       <div class="gallery-item">
         <a href="#img1">
-          <img src="untitled.41 2.JPG" alt="Product Design">
+          <img src="untitled.41%202.JPG" alt="Product Design">
         </a>
       </div>
       <div class="gallery-item">
         <a href="#img2">
-          <img src="Exploded Organiser.45.jpg" alt="Exploded Organiser">
+          <img src="Exploded%20Organiser.45.jpg" alt="Exploded Organiser">
         </a>
       </div>
     </div>
@@ -231,12 +231,12 @@
   <!-- Lightbox -->
   <div id="img1" class="lightbox">
     <a href="#" class="close">&times;</a>
-    <img src="untitled.41 2.JPG" alt="Product Design Large">
+    <img src="untitled.41%202.JPG" alt="Product Design Large">
   </div>
 
   <div id="img2" class="lightbox">
     <a href="#" class="close">&times;</a>
-    <img src="Exploded Organiser.45.jpg" alt="Exploded Organiser Large">
+    <img src="Exploded%20Organiser.45.jpg" alt="Exploded Organiser Large">
   </div>
 
   <script>
